[package]
name = "pass"
version = "0.1.0"
authors = ["maxkul <kma.memo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
argh = "0.1.4"
md5 = "0.7.0"
bincode = "1.3.1"
snap = "1.0.3"
rayon = "1.5.0"
memmap = "0.7.0"
indicatif = "0.15.0"
